--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      # Tidak perlu args lagi! .env sudah di-copy di Dockerfile
     restart: unless-stopped
     ports:
       - "3001:3000"  # Map port 3001 di host ke 3000 di container
     environment:
       - NODE_ENV=production
-      # Jika ada environment variables lain, tambahkan di sini
-      # Atau load dari .env file
     env_file:
-      - .env  # Load environment variables dari .env file
+      - .env  # Load environment variables dari .env file (untuk runtime jika perlu)
     networks:
       - ganesha-network
     healthcheck:
