--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "clsx": "^2.1.1",
     "next": "15.5.4",
+    "next-intl": "^3.24.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "typescript": "^5"
