--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "clsx": "^2.1.1",
+    "country-list": "^2.4.1",
     "next": "15.5.4",
     "next-intl": "^3.24.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "typescript": "^5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/country-list": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
