--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
+    "@noble/hashes": "^2.0.1",
+    "aes-js": "^3.1.2",
     "clsx": "^2.1.1",
     "country-list": "^2.4.1",
     "next": "15.5.4",
