--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "node scripts/lint-check.js"
     ],
     "*.{json,css,md}": [
       "prettier --write"
