--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "aes-js": "^3.1.2",
     "clsx": "^2.1.1",
     "country-list": "^2.4.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "next": "15.5.4",
     "next-intl": "^3.24.1",
     "react": "19.1.0",
