--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@expo-google-fonts/plus-jakarta-sans": "^0.4.2",
     "@noble/curves": "^1.4.2",
     "@noble/hashes": "^1.8.0",
+    "@types/qrcode": "^1.5.6",
     "aes-js": "^3.1.2",
     "clsx": "^2.1.1",
     "country-list": "^2.4.1",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.3",
     "next": "15.5.4",
     "next-intl": "^3.24.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-select": "^5.10.2",
