add generateCredentialImage() function

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^3.0.3",
     "next": "15.5.4",
     "next-intl": "^3.24.1",
+    "pdfjs-dist": "^5.4.394",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
