--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.3",
     "konva": "^10.0.12",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-intl": "^3.24.1",
     "pdfjs-dist": "^5.4.394",
     "qrcode": "^1.5.4",
